Making little changes in the code till using EKF

--- a/EKF-UKF-ParticleFilter.ipynb
+++ b/EKF-UKF-ParticleFilter.ipynb
@@ -221,7 +221,34 @@
     "R= np.array([\n",
     "    [19.2, 0],\n",
     "    [0, 16.8]\n",
-    "])"
+    "])\n",
+    "\n",
+    "# Prameters setup for simulation\n",
+    "u= 0.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1644abf0",
+   "metadata": {},
+   "source": [
+    "# Warning!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03096c62",
+   "metadata": {},
+   "source": [
+    "You can skip cells below till the next seperate line if you already have the \"pendulum_noisy_data.xlsx\" file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3ab6e19",
+   "metadata": {},
+   "source": [
+    "----"
    ]
   },
   {
@@ -336,7 +363,6 @@
     "states= np.zeros((N, 4))\n",
     "measurements= np.zeros((N, 2))\n",
     "x= x0.copy()\n",
-    "u= 0.0\n",
     "\n",
     "for t in range(N):\n",
     "    # Save state\n",
@@ -416,6 +442,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "295d45a6",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "98bade94",
    "metadata": {},
    "source": [
@@ -442,8 +476,16 @@
     "\n",
     "# Extract true states and measurements\n",
     "X_true= data[['x1', 'x2', 'x3', 'x4']].values\n",
-    "Y_meas= data[['y1', 'y2']].values\n",
-    "\n",
+    "Y_meas= data[['y1', 'y2']].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "47a9b867",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Constants\n",
     "dt= 0.001\n",
     "steps= X_true.shape[0]"
@@ -475,23 +517,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "8c21b85d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- System dynamics (as before) ---\n",
-    "def f(x, u= 0.0):\n",
-    "    x1, x2, x3, x4= x\n",
-    "    dx1= x2\n",
-    "    num2= u * np.cos(x1) - (M + m) * g * np.sin(x1) + m * l * np.cos(x1) * np.sin(x1) * x2**2\n",
-    "    den2= m * l * np.cos(x1)**2 - (M + m) * l\n",
-    "    dx2= num2 / den2\n",
-    "    dx3= x4\n",
-    "    num4= u + m * l * np.sin(x1) * x2**2 - m * g * np.cos(x1) * np.sin(x1)\n",
-    "    den4= M + m - m * np.cos(x1)**2\n",
-    "    dx4= num4 / den4\n",
-    "    return np.array([x1 + dt * dx1, x2 + dt * dx2, x3 + dt * dx3, x4 + dt * dx4])\n",
+    "def f(x, u= 0):\n",
+    "    return discrete_step(x, u, dt)\n",
     "\n",
     "# --- Measurement model ---\n",
     "def h(x):\n",
@@ -533,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "33ffe9fe",
    "metadata": {},
    "outputs": [],
@@ -571,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "236af35a",
    "metadata": {},
    "outputs": [
@@ -590,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "98955d4f",
    "metadata": {},
    "outputs": [
