Working on Particle Filter

--- a/EKF-UKF-ParticleFilter.ipynb
+++ b/EKF-UKF-ParticleFilter.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "id": "b31a67c9",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,11 @@
     "import matplotlib.pyplot as plt\n",
     "from filterpy.kalman import ExtendedKalmanFilter as EKF\n",
     "from filterpy.kalman import UnscentedKalmanFilter as UKF\n",
-    "from filterpy.kalman import MerweScaledSigmaPoints"
+    "from filterpy.kalman import MerweScaledSigmaPoints\n",
+    "from filterpy.monte_carlo import systematic_resample\n",
+    "from filterpy.monte_carlo import residual_resample\n",
+    "from filterpy.monte_carlo import stratified_resample\n",
+    "from filterpy.monte_carlo import multinomial_resample"
    ]
   },
   {
@@ -1343,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "7d53905c",
    "metadata": {},
    "outputs": [],
@@ -1363,19 +1367,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "c0a42930",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# ---- Nonlinear dynamics function ----(same as before)\n",
-    "# pendulum_dynamics(x, u)\n",
-    "\n",
-    "# ---- Measurement function ----(same as before)\n",
-    "# h(x)\n",
-    "\n",
-    "# parameters same as before too"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1387,45 +1383,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "208edc03",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# # ---- Particle Filter ----\n",
-    "# num_particles= 1000\n",
-    "# particles= np.random.multivariate_normal(X_true[0], Q, num_particles)\n",
-    "# weights= np.ones(num_particles) / num_particles\n",
-    "\n",
-    "# X_est= np.zeros((N, 4))\n",
-    "\n",
-    "# for k in range(N):\n",
-    "#     # Predict\n",
-    "#     for i in range(num_particles):\n",
-    "#         process_noise= np.random.multivariate_normal(np.zeros(4), Q)\n",
-    "#         dx= pendulum_dynamics(particles[i], u)\n",
-    "#         particles[i] += dt * dx + process_noise * np.sqrt(dt)\n",
-    "    \n",
-    "#     # Update weights using measurement likelihood\n",
-    "#     y_pred= np.array([h(p) for p in particles])\n",
-    "#     residuals= Y_meas[k] - y_pred\n",
-    "#     likelihoods= np.exp(-0.5 * np.sum(residuals @ np.linalg.inv(R) * residuals, axis= 1))\n",
-    "#     likelihoods /= np.max(likelihoods) + 1e-12  # normalize for numerical stability\n",
-    "\n",
-    "#     weights *= likelihoods\n",
-    "#     weights += 1e-300  # prevent zero weights\n",
-    "#     weights /= np.sum(weights)\n",
-    "\n",
-    "#     # Estimate state as weighted mean\n",
-    "#     X_est[k]= np.average(particles, weights= weights, axis= 0)\n",
-    "\n",
-    "#     # Resample if effective number of particles is low\n",
-    "#     Neff= 1. / np.sum(weights**2)\n",
-    "#     if Neff < num_particles / 2:\n",
-    "#         indices= np.random.choice(num_particles, num_particles, p= weights)\n",
-    "#         particles= particles[indices]\n",
-    "#         weights.fill(1.0 / num_particles)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1437,14 +1399,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "62207eb4",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# rmse= np.sqrt(np.mean((X_est - X_true)**2, axis= 0))\n",
-    "# print(f\"RMSE per state: {rmse}\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1456,182 +1415,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "9a1b7463",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # ---- Plot results ----\n",
-    "# labels= ['x1 (theta)', 'x2 (theta_dot)', 'x3 (x)', 'x4 (x_dot)']\n",
-    "# plt.figure(figsize=(12,10))\n",
-    "# for i in range(4):\n",
-    "#     plt.subplot(2, 2, i + 1)\n",
-    "#     plt.plot(X_true[:, i], label= 'True')\n",
-    "#     plt.plot(X_est[:, i], label= 'Estimated')\n",
-    "#     plt.xlabel('Sample')\n",
-    "#     plt.ylabel(labels[i])\n",
-    "#     plt.legend()\n",
-    "# plt.tight_layout()\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "321364ca",
-   "metadata": {},
-   "source": [
-    "lets do this again"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ef6f7ce2",
-   "metadata": {},
-   "source": [
-    "Loading the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "38aa645c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data= pd.read_excel('pendulum_noisy_data.xlsx')\n",
-    "# X_true= data[['x1', 'x2', 'x3', 'x4']].values  # shape (10001, 4)\n",
-    "# Y_meas= data[['y1', 'y2']].values              # shape (10001, 2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "02030c9b",
-   "metadata": {},
-   "source": [
-    "Initialization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "3f370747",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # ---- Nonlinear dynamics function ----(same as before)\n",
-    "# # pendulum_dynamics(x, u)\n",
-    "\n",
-    "# # ---- Measurement function ----(same as before)\n",
-    "# # h(x)\n",
-    "\n",
-    "# # parameters same as before too\n",
-    "\n",
-    "# N= X_true.shape[0]  # total samples"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4418bffe",
-   "metadata": {},
-   "source": [
-    "Particle Filter loop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "d7e09790",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # ---------------- PARTICLE FILTER ----------------\n",
-    "# num_particles= 1000\n",
-    "# particles= np.random.multivariate_normal(X_true[0], Q, num_particles)\n",
-    "# weights= np.ones(num_particles) / num_particles\n",
-    "# x_est= np.zeros((N, 4))\n",
-    "\n",
-    "# for k in range(N):\n",
-    "#     # ---- Predict step ----\n",
-    "#     for i in range(num_particles):\n",
-    "#         process_noise= np.random.multivariate_normal(np.zeros(4), Q) * np.sqrt(dt)\n",
-    "#         dx = pendulum_dynamics(particles[i], u)\n",
-    "#         particles[i] += dt * dx + process_noise\n",
-    "\n",
-    "#     # ---- Measurement prediction ----\n",
-    "#     y_particles= np.array([h(p) for p in particles])\n",
-    "\n",
-    "#     # ---- Weight update (likelihood) ----\n",
-    "#     diff= Y_meas[k] - y_particles\n",
-    "#     exponent= -0.5 * np.sum(diff @ np.linalg.inv(R) * diff, axis= 1)\n",
-    "#     likelihood= np.exp(exponent)\n",
-    "#     likelihood += 1e-300  # prevent zero\n",
-    "#     weights *= likelihood\n",
-    "#     weights /= np.sum(weights)\n",
-    "\n",
-    "#     # ---- Estimate state ----\n",
-    "#     x_est[k]= np.average(particles, axis= 0, weights= weights)\n",
-    "\n",
-    "#     # ---- Resample if needed ----\n",
-    "#     Neff = 1. / np.sum(weights**2)\n",
-    "#     if Neff < num_particles / 2:\n",
-    "#         indices= np.random.choice(num_particles, num_particles, p= weights)\n",
-    "#         particles= particles[indices]\n",
-    "#         weights.fill(1.0 / num_particles)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b759fe9a",
-   "metadata": {},
-   "source": [
-    "RMSE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "7eba36f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # ---------------- RMSE ----------------\n",
-    "# rmse= np.sqrt(np.mean((X_true - x_est)**2, axis= 0))\n",
-    "# print(f\"RMSE for each state: {rmse}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "eee424b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # ---------------- PLOT RESULTS ----------------\n",
-    "# labels= ['x1 (theta)', 'x2 (theta_dot)', 'x3 (x)', 'x4 (x_dot)']\n",
-    "# plt.figure(figsize= (12,10))\n",
-    "# for i in range(4):\n",
-    "#     plt.subplot(2, 2, i + 1)\n",
-    "#     plt.plot(X_true[:, i], label= 'True')\n",
-    "#     plt.plot(x_est[:, i], label= 'Estimated')\n",
-    "#     plt.xlabel('Sample')\n",
-    "#     plt.ylabel(labels[i])\n",
-    "#     plt.legend()\n",
-    "# plt.tight_layout()\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bb179b34",
-   "metadata": {},
-   "source": [
-    "PF implementation using filterpy"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "a96cbbf8",
+   "id": "9a1b7463",
    "metadata": {},
    "outputs": [],
    "source": []
