Working on Particle Filter

--- a/EKF-UKF-ParticleFilter.ipynb
+++ b/EKF-UKF-ParticleFilter.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "id": "b31a67c9",
    "metadata": {},
    "outputs": [],
@@ -38,10 +38,7 @@
     "from filterpy.kalman import ExtendedKalmanFilter as EKF\n",
     "from filterpy.kalman import UnscentedKalmanFilter as UKF\n",
     "from filterpy.kalman import MerweScaledSigmaPoints\n",
-    "from filterpy.monte_carlo import systematic_resample\n",
-    "from filterpy.monte_carlo import residual_resample\n",
-    "from filterpy.monte_carlo import stratified_resample\n",
-    "from filterpy.monte_carlo import multinomial_resample"
+    "from filterpy.monte_carlo import systematic_resample"
    ]
   },
   {
@@ -1347,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "7d53905c",
    "metadata": {},
    "outputs": [],
@@ -1367,11 +1364,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "c0a42930",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# # Physical parameters\n",
+    "# m= 0.1    # pendulum mass (kg)\n",
+    "# M= 5.0    # cart mass (kg)\n",
+    "# g= 9.81   # gravity (m/s^2)\n",
+    "# l= 0.72   # pendulum length (m)\n",
+    "# dt= 0.001 # sampling time (s) = 1ms\n",
+    "\n",
+    "# Q= np.diag([15, 9.6, 10, 17])\n",
+    "# R= np.diag([19.2, 16.8])\n",
+    "\n",
+    "# # Continuous-time dynamics\n",
+    "# def f(x, u= 0):\n",
+    "#     x1, x2, x3, x4= x\n",
+    "\n",
+    "#     dx1= x2\n",
+    "\n",
+    "#     num2= u * np.cos(x1) - (M + m) * g * np.sin(x1) + m * l * np.cos(x1) * np.sin(x1) * x2**2\n",
+    "#     den2= m * l * np.cos(x1)**2 - (M + m) * l\n",
+    "#     dx2= num2 / den2\n",
+    "\n",
+    "#     dx3= x4\n",
+    "\n",
+    "#     num4= u + m * l * np.sin(x1) * x2**2 - m * g * np.cos(x1) * np.sin(x1)\n",
+    "#     den4= M + m - m * np.cos(x1)**2\n",
+    "#     dx4= num4 / den4\n",
+    "\n",
+    "#     dx= np.array([dx1, dx2, dx3, dx4])\n",
+    "#     process_noise= np.random.multivariate_normal(np.zeros(4), Q * dt)\n",
+    "#     return x + dt * dx + process_noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "a034e5dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# N_particles= 100\n",
+    "# T= X_true.shape[0]  # 10001 samples\n",
+    "# H= np.array([[1, 0, 0, 0],\n",
+    "#             [0, 0, 1, 0]])\n",
+    "\n",
+    "# # Initial particles: uniformly random in [-0.1, 0.1] for each state\n",
+    "# particle= np.random.uniform(-0.1, 0.1, size= (N_particles, 4))\n",
+    "# weights= []\n",
+    "# particles= []\n",
+    "# estimates= []\n",
+    "\n",
+    "# for i in range(T):\n",
+    "#     weight= []\n",
+    "#     x_predict= []\n",
+    "#     for j in range(N_particles):\n",
+    "#         x_pred= f(particle[j])\n",
+    "#         x_predict.append(x_pred)\n",
+    "#         s= Y_meas[i] - H @ x_pred\n",
+    "#         w= np.exp(-0.5 * s.T @ np.linalg.inv(R) @ s)\n",
+    "#         weight.append(w)\n",
+    "#     sum_weight= sum(weight)\n",
+    "#     weight= [i / sum_weight for i in weight]\n",
+    "#     weights.append(weight)\n",
+    "#     particles.append(particle)\n",
+    "#     indices= systematic_resample(weight)\n",
+    "#     x_predict= np.array(x_predict)[indices]\n",
+    "#     x_hat= np.mean(x_predict, axis= 0)\n",
+    "#     estimates.append(x_hat)\n",
+    "#     particle= x_predict"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1403,7 +1468,9 @@
    "id": "62207eb4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# np.sqrt(np.mean((X_true - estimates)**2))"
+   ]
   },
   {
    "cell_type": "markdown",
