Working on Particle Filter

--- a/EKF-UKF-ParticleFilter.ipynb
+++ b/EKF-UKF-ParticleFilter.ipynb
@@ -1402,40 +1402,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 93,
    "id": "a034e5dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# N_particles= 100\n",
-    "# T= X_true.shape[0]  # 10001 samples\n",
-    "# H= np.array([[1, 0, 0, 0],\n",
-    "#             [0, 0, 1, 0]])\n",
+    "N_particles= 100\n",
+    "T= X_true.shape[0]  # 10001 samples\n",
+    "H= np.array([[1, 0, 0, 0],\n",
+    "            [0, 0, 1, 0]])\n",
     "\n",
-    "# # Initial particles: uniformly random in [-0.1, 0.1] for each state\n",
-    "# particle= np.random.uniform(-0.1, 0.1, size= (N_particles, 4))\n",
-    "# weights= []\n",
-    "# particles= []\n",
-    "# estimates= []\n",
+    "# Initial particles: uniformly random in [-0.1, 0.1] for each state\n",
+    "particle= np.random.uniform(-0.1, 0.1, size= (N_particles, 4))\n",
+    "weights= []\n",
+    "particles= []\n",
+    "estimates= []\n",
     "\n",
-    "# for i in range(T):\n",
-    "#     weight= []\n",
-    "#     x_predict= []\n",
-    "#     for j in range(N_particles):\n",
-    "#         x_pred= f(particle[j])\n",
-    "#         x_predict.append(x_pred)\n",
-    "#         s= Y_meas[i] - H @ x_pred\n",
-    "#         w= np.exp(-0.5 * s.T @ np.linalg.inv(R) @ s)\n",
-    "#         weight.append(w)\n",
-    "#     sum_weight= sum(weight)\n",
-    "#     weight= [i / sum_weight for i in weight]\n",
-    "#     weights.append(weight)\n",
-    "#     particles.append(particle)\n",
-    "#     indices= systematic_resample(weight)\n",
-    "#     x_predict= np.array(x_predict)[indices]\n",
-    "#     x_hat= np.mean(x_predict, axis= 0)\n",
-    "#     estimates.append(x_hat)\n",
-    "#     particle= x_predict"
+    "for i in range(T):\n",
+    "    weight= []\n",
+    "    x_predict= []\n",
+    "    # particles.append(particle)\n",
+    "    for j in range(N_particles):\n",
+    "        x_pred= f(particle[j])\n",
+    "        x_predict.append(x_pred)\n",
+    "        s= Y_meas[i] - H @ x_pred\n",
+    "        w= np.exp(-0.5 * s.T @ np.linalg.inv(R) @ s)\n",
+    "        weight.append(w)\n",
+    "    sum_weight= sum(weight)\n",
+    "    if sum_weight == 0:\n",
+    "        weight= [1.0 / N_particles] * N_particles  # reset to uniform weights\n",
+    "    else:\n",
+    "        weight= [e / sum_weight for e in weight]\n",
+    "    weights.append(weight)\n",
+    "    indices= systematic_resample(weight)\n",
+    "    x_predict= np.array(x_predict)[indices]\n",
+    "    x_hat= np.mean(x_predict, axis= 0)\n",
+    "    estimates.append(x_hat)\n",
+    "    particle= x_predict"
    ]
   },
   {
@@ -1464,12 +1467,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "62207eb4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 189.92245283,  107.08090844, 2289.45368123,  437.01017388])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# np.sqrt(np.mean((X_true - estimates)**2))"
+    "np.sqrt(np.mean((X_true - estimates)**2, axis= 0))"
    ]
   },
   {
