--- a/EKF-UKF-ParticleFilter.ipynb
+++ b/EKF-UKF-ParticleFilter.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "b31a67c9",
    "metadata": {},
    "outputs": [],
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 33,
    "id": "7d53905c",
    "metadata": {},
    "outputs": [],
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 34,
    "id": "c0a42930",
    "metadata": {},
    "outputs": [],
@@ -1402,12 +1402,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 38,
    "id": "a034e5dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_particles= 100\n",
+    "N_particles= 1000\n",
     "T= X_true.shape[0]  # 10001 samples\n",
     "H= np.array([[1, 0, 0, 0],\n",
     "            [0, 0, 1, 0]])\n",
@@ -1433,10 +1433,12 @@
     "        weight= [1.0 / N_particles] * N_particles  # reset to uniform weights\n",
     "    else:\n",
     "        weight= [e / sum_weight for e in weight]\n",
-    "    weights.append(weight)\n",
+    "    # weights.append(weight)\n",
     "    indices= systematic_resample(weight)\n",
+    "    weight= np.array(weight)[indices]\n",
     "    x_predict= np.array(x_predict)[indices]\n",
-    "    x_hat= np.mean(x_predict, axis= 0)\n",
+    "    x_hat= np.sum(weight[:, np.newaxis] * x_predict, axis= 0)\n",
+    "    # x_hat= np.mean(x_predict, axis= 0)\n",
     "    estimates.append(x_hat)\n",
     "    particle= x_predict"
    ]
@@ -1467,17 +1469,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 39,
    "id": "62207eb4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 189.92245283,  107.08090844, 2289.45368123,  437.01017388])"
+       "array([ 159.52423312,  109.78657887, 2311.17139602,  433.99441407])"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
